--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -3,6 +3,9 @@
   "unknown_error": "Error desconocido",
   "sort_top": "Popular",
   "sort_latest": "Reciente",
+  "drawer_about": "Acerca de",
+  "drawer_settings": "Ajustes",
+  "drawer_source": "Código fuente",
   "drawer_my_profile": "Mi perfil",
   "drawer_logout": "Cerrar sesión",
   "drawer_logout_ok": "Sesión cerrada exitosamente",
