--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -19,6 +19,7 @@
   "feed_nLikes": "{count, plural, =0{no hay favoritos} =1{1 favorito} other{{count} favoritos}}",
   "hashtags_title": "Etiquetas",
   "hashtags_empty": "Tus etiquetas se verán aquí cuando las guardes",
+  "hashtag_saved": "Etiqueta guardada",
   "notifications_title": "Notificaciones",
   "notifications_follow": "te ha seguido",
   "notifications_like": "le ha gustado tu publicación",
